change title in document head

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Section 2: JavaScript Language Basics</title>
+    <title>JavaScript Language Basics</title>
 </head>
 
 <body>
