--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Section 2: JavaScript Basics</h1>
+    <h1>JavaScript Basics</h1>
 </body>
 <script src="script.js"></script>
 
